Fix code block wrapping.

--- a/src/themes/thereserveforce-2019/assets/css/_elements.scss
+++ b/src/themes/thereserveforce-2019/assets/css/_elements.scss
@@ -4,7 +4,7 @@ pre code{
 	padding: 2px 6px;
 	color: #1C1C1C;
 	font-family: monospace;
-	white-space: pre;
+	white-space: pre-wrap;
 }
 pre code{
 	display: block;
